--- a/project/style.css
+++ b/project/style.css
@@ -1,7 +1,13 @@
+* {
+    font-family: "Inter", sans-serif;
+    scroll-behavior: smooth;
+}
+
 html,
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 .container {
@@ -10,22 +16,14 @@ body {
 }
 
 .nav {
-    background-color: white;
+    background-color: #22223B;
     height: 80px;
     width: 100%;
     position: fixed;
     z-index: 10;
+    text-align: center;
 }
 
-.navPlaceHolder {
-    height: 80px;
-    width: 100%;
-}
-
-.nav .container {
-    float: center;
-    margin: 0 auto;
-}
 
 .nav ul {
     height: 80px;
@@ -35,18 +33,20 @@ body {
 }
 
 .nav ul li {
-    color: rgb(0, 0, 0);
+    color: #F2E9E4;
     display: inline-block;
     height: 80px;
     line-height: 80px;
     list-style: none;
     padding: 0 10px;
+    transition: background .5s ease-in-out;
+    width: max-content;
 }
 
 .nav ul li:hover {
-    background: rgb(88, 101, 242);
+    background: #4A4E69;
     cursor: pointer;
-    transition: background .5s ease-out;
+    transition: background .5s ease-in-out;
 }
 
 a:link {
@@ -62,33 +62,95 @@ a:visited {
 }
 
 a:hover {
-    color: rgb(88, 101, 242);
+    color: inherit;
     background-color: transparent;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:active {
-    color: rgb(88, 101, 242);
+    color: inherit;
     background-color: transparent;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
-section {
-    padding: 10px;
-    margin: 10px;
-    /* border-bottom: 1px solid black; */
+#appWebsite {
+    padding-top: 80px;
 }
 
 #appWebsite,
 #appPassword,
 #appQuiz {
-    background-color: black;
-    color: white;
+    background-color: #F2E9E4;
+    color: #22223B;
 }
 
 #appMusic,
 #appPorfolio,
 #appSurvey {
-    background-color: white;
-    color: black;
+    background-color: #22223B;
+    color: #F2E9E4;
+}
+
+.welcome_container {
+    margin: 0 auto;
+    padding: 0;
+}
+
+.welcome {
+    position: relative;
+    padding-top: 10%;
+}
+
+.navPlaceHolder {
+    height: 80px;
+    width: 100%;
+}
+
+.welcome ul {
+    height: 80px;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.welcome ul li {
+    display: inline-block;
+    padding: 0 20px;
+    width: max-content;
+    height: 100px;
+    width: 100px;
+    line-height: 100px;
+    border-radius: 30px;
+    list-style: none;
+    color: #F2E9E4;
+    background-color: #22223B;
+    transition: background .5s ease-in-out;
+}
+
+.welcome ul li:hover {
+    background: #4A4E69;
+    cursor: pointer;
+    transition: background .5s ease-in-out;
+}
+
+section {
+    height: 100vh;
+    text-align: center;
+}
+
+.appDesc {
+    padding-top: 120px;
+    text-align: center;
+}
+.appLaunch {
+    padding: 30px;
+    line-height: 30px;
+    border-radius: 30px;
+    transition: background .5s ease-in-out;
+}
+
+.appLaunch:hover {
+    background: #4A4E69;
+    cursor: pointer;
+    transition: background .5s ease-in-out;
 }
