--- a/project/password/style.css
+++ b/project/password/style.css
@@ -72,3 +72,8 @@ a:active {
     background-color: transparent;
     text-decoration: none;
 }
+
+.navPlaceHolder {
+    height: 80px;
+    width: 100%;
+}
