--- a/project/style.css
+++ b/project/style.css
@@ -3,6 +3,16 @@
     scroll-behavior: smooth;
 }
 
+:root {
+    --launch: rgb(204, 144, 233);
+    --space_cadet: #22223B;
+    --space_cadet_bis: #1d1d32;
+    --independance: #4A4E69;
+    --heliotrope_gray: #9A8C98;
+    --silver_pink: #C9ADA7;
+    --isabeline: #F2E9E4;
+}
+
 html,
 body {
     margin: 0;
@@ -15,8 +25,13 @@ body {
     padding: 0;
 }
 
+.active {
+    text-decoration: underline solid 1px white;
+    text-underline-offset: 10px;
+}
+
 .nav {
-    background-color: #22223B;
+    background-color: var(--space_cadet);
     height: 80px;
     width: 100%;
     position: fixed;
@@ -33,7 +48,7 @@ body {
 }
 
 .nav ul li {
-    color: #F2E9E4;
+    color: var(--isabeline);
     display: inline-block;
     height: 80px;
     line-height: 80px;
@@ -44,26 +59,16 @@ body {
 }
 
 .nav ul li:hover {
-    background: #4A4E69;
     cursor: pointer;
-    transition: background .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    text-decoration: underline solid 1px white;
+    text-underline-offset: 10px;
 }
 
-a:link {
-    color: inherit;
-    text-decoration: none;
-}
 
-a:visited {
-    color: inherit;
-    text-decoration: none;
-}
-
-a:hover {
-    color: inherit;
-    text-decoration: none;
-}
-
+a:link,
+a:visited,
+a:hover,
 a:active {
     color: inherit;
     text-decoration: none;
@@ -71,24 +76,25 @@ a:active {
 
 #appWebsite {
     padding-top: 80px;
-    background-image: url(../images/pixel-rain.gif);
+    /* background-image: url(../images/pixel-rain.gif); */
     background-position: center;
     background-repeat: no-repeat;
-    background-size:cover;
-    color: #F2E9E4 !important;
+    background-size: cover;
+    color: var(--space_cadet) !important;
+    background-color: var(--isabeline);
 }
 
 #appPassword,
 #appQuiz {
-    background-color: #F2E9E4;
-    color: #22223B;
+    background-color: var(--isabeline);
+    color: var(--space_cadet);
 }
 
 #appMusic,
 #appPorfolio,
 #appSurvey {
-    background-color: #22223B;
-    color: #F2E9E4;
+    background-color: var(--space_cadet);
+    color: var(--isabeline);
 }
 
 .welcome_container {
@@ -113,24 +119,31 @@ a:active {
     padding: 0;
 }
 
+/* sticky bar on top of the page */
 .welcome ul li {
     display: inline-block;
-    padding: 0 20px;
-    width: max-content;
-    height: 100px;
     width: 100px;
+    color: var(--space_cadet);
     line-height: 100px;
-    border-radius: 30px;
-    list-style: none;
-    color: #F2E9E4;
-    background-color: #22223B;
-    transition: background .5s ease-in-out;
+    padding: 0 30px;
+    margin: 15px;
+    /* for perfectly round angle */
+    border-radius: 9999px;
+    transition: all .25s ease-in-out;
+
+    border: 4px solid var(--isabeline);
+    box-shadow: 8px 8px 12px rgb(154, 140, 152, 0.8),
+        -8px -8px 12px rgb(201, 173, 167, 0.8);
 }
 
 .welcome ul li:hover {
-    background: #4A4E69;
-    cursor: pointer;
-    transition: background .5s ease-in-out;
+    color: var(--launch);
+    padding: 0 35px;
+
+    box-shadow: 4px 4px 6px rgb(154, 140, 152, 0.6),
+        -4px -4px 6px rgb(201, 173, 167, 0.3),
+        inset 4px 4px 6px rgb(154, 140, 152, 0.6),
+        inset -4px -4px 6px rgb(201, 173, 167, 0.3);
 }
 
 section {
@@ -142,21 +155,44 @@ section {
     padding-top: 120px;
 }
 
+/* button app launcher */
 .appLaunch {
-    width: 100px;
-    padding: 30px;
     line-height: 30px;
-    border-radius: 30px;
-    transition: background .5s ease-in-out;
-    align-items: center;
-    /* display: flex; */
-    gap: 10px;
+    padding: 30px;
+    /* for perfectly round angle */
+    border-radius: 9999px;
+    transition: all .25s ease-in-out;
 }
 
 .appLaunch:hover {
-    background-color: #4A4E69;
-    cursor: pointer;
-    transition: background .5s ease-in-out;
+    color: var(--launch);
+    padding: 35px;
+}
+
+.launchDark {
+    border: 4px solid var(--space_cadet);
+    box-shadow: 10px 10px 15px rgb(22, 22, 38),
+        -10px -10px 15px rgb(46, 46, 80);
+}
+
+.launchDark:hover {
+    box-shadow: 4px 4px 6px rgba(22, 22, 38, 0.6),
+        -4px -4px 6px rgba(46, 46, 80, 0.3),
+        inset 4px 4px 6px rgba(22, 22, 38, 0.6),
+        inset -4px -4px 6px rgba(46, 46, 80, 0.3);
+}
+
+.launchLight {
+    border: 4px solid var(--isabeline);
+    box-shadow: 8px 8px 12px rgb(154, 140, 152, 0.8),
+        -8px -8px 12px rgb(201, 173, 167, 0.8);
+}
+
+.launchLight:hover {
+    box-shadow: 4px 4px 6px rgb(154, 140, 152, 0.6),
+        -4px -4px 6px rgb(201, 173, 167, 0.3),
+        inset 4px 4px 6px rgb(154, 140, 152, 0.6),
+        inset -4px -4px 6px rgb(201, 173, 167, 0.3);
 }
 
 .appName {
