--- a/project/password/style.css
+++ b/project/password/style.css
@@ -1,5 +1,13 @@
-#container {
+.classFlex {
     display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.classFlexStart {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .passList {
@@ -9,9 +17,12 @@
     background-color: var(--isabeline);
     text-align: left;
     margin: 20px;
-    max-width: min-content;
-    overflow-y: scroll;
-    max-height: calc(100vh - 140px)
+    min-width: max-content;
+    max-height: calc(100vh - 140px);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .passList::-webkit-scrollbar {
@@ -22,6 +33,7 @@
     list-style: none;
     display: block;
     padding: 0;
+    margin: 0;
 }
 
 .passList ul li {
@@ -30,9 +42,6 @@
 }
 
 .passListObject {
-    display: flex;
-    align-items: center;
-
     color: var(--space_cadet);
     padding: 0 30px;
     margin: 15px;
@@ -46,14 +55,95 @@
 }
 
 .passListObject:hover {
-    color: var(--launch);
-
     box-shadow: 4px 4px 6px rgb(154, 140, 152, 0.6),
         -4px -4px 6px rgb(201, 173, 167, 0.3),
         inset 4px 4px 6px rgb(154, 140, 152, 0.6),
         inset -4px -4px 6px rgb(201, 173, 167, 0.3);
+
+    text-shadow: 4px 4px 2px rgb(154, 140, 152, 0.6);
 }
 
 .passWebIcon {
     margin: 5px;
+}
+
+.passInfo {
+    border-radius: 20px;
+    border: 5px solid var(--silver_pink);
+
+    background-color: var(--isabeline);
+    text-align: left;
+    margin: 20px;
+    overflow-x: hidden;
+    max-height: calc(100vh - 140px);
+    width: 100%;
+}
+
+.passWebsite {
+    width: 100%;
+
+    color: var(--space_cadet);
+    padding: 0 30px;
+    margin: 15px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background: linear-gradient(to right, white 0%, var(--isabeline) 100%);
+}
+
+.passData {
+    margin-left: 40px;
+}
+
+.passId {
+    margin-bottom: 0;
+}
+
+.password {
+    margin-right: 5px;
+}
+
+.passwordInput {
+    background: none;
+    border: none;
+    user-select: none;
+    pointer-events: none;
+}
+
+.passEdit {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 10px;
+}
+
+/* Buttons */
+
+.passButton {
+    margin: 0 10px;
+    background: none;
+    padding: 5px 10px;
+
+    border-radius: 9999px;
+    transition: all .25s ease-in-out;
+
+    border: 4px solid var(--isabeline);
+    box-shadow: 8px 8px 12px rgb(154, 140, 152, 0.8),
+        -8px -8px 12px rgb(201, 173, 167, 0.8);
+}
+
+.passButton:hover {
+    box-shadow: 4px 4px 6px rgb(154, 140, 152, 0.6),
+        -4px -4px 6px rgb(201, 173, 167, 0.3),
+        inset 4px 4px 6px rgb(154, 140, 152, 0.6),
+        inset -4px -4px 6px rgb(201, 173, 167, 0.3);
+    text-shadow: 4px 4px 2px rgb(154, 140, 152, 0.6);
+}
+
+
+.add {
+    background-image: url("../../images/plus.png");
+    background-size: contain;
+    padding: 20px;
+    margin: 10px;
+    display: flex;
 }
