--- a/project/style.css
+++ b/project/style.css
@@ -138,12 +138,12 @@ a:active {
 
 .welcome ul li:hover {
     color: var(--launch);
-    padding: 0 35px;
 
     box-shadow: 4px 4px 6px rgb(154, 140, 152, 0.6),
         -4px -4px 6px rgb(201, 173, 167, 0.3),
         inset 4px 4px 6px rgb(154, 140, 152, 0.6),
         inset -4px -4px 6px rgb(201, 173, 167, 0.3);
+    text-shadow: 4px 4px 2px rgb(154, 140, 152, 0.6);
 }
 
 section {
@@ -166,7 +166,6 @@ section {
 
 .appLaunch:hover {
     color: var(--launch);
-    padding: 35px;
 }
 
 .launchDark {
@@ -180,6 +179,7 @@ section {
         -4px -4px 6px rgba(46, 46, 80, 0.3),
         inset 4px 4px 6px rgba(22, 22, 38, 0.6),
         inset -4px -4px 6px rgba(46, 46, 80, 0.3);
+    text-shadow: 4px 4px 2px rgba(235, 215, 215, 0.384);
 }
 
 .launchLight {
@@ -193,6 +193,7 @@ section {
         -4px -4px 6px rgb(201, 173, 167, 0.3),
         inset 4px 4px 6px rgb(154, 140, 152, 0.6),
         inset -4px -4px 6px rgb(201, 173, 167, 0.3);
+    text-shadow: 4px 4px 2px rgb(154, 140, 152, 0.6);
 }
 
 .appName {
